# AlgoFlow

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/algoflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/agents/: adk_agents.py  instructions.py
backend/app/api/: routes.py
backend/app/core/: auth.py  auth_tokens.py  config.py  errors.py  middleware.py  policy.py  request_context.py  semantic_policy.py  tool_gateway.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/evaluation/: __init__.py  adk_live_runtime_eval.py  adk_routing_eval.py  adk_tool_orchestration_eval.py  cli.py  code_review_eval.py  hint_eval.py  (+4 more)
backend/tests/: conftest.py  test_adk_runtime_trajectory.py  test_adk_tool_orchestration.py  test_api_contracts.py  test_ci_evaluation_contract.py  test_code_review.py  test_code_review_eval.py  test_code_review_skill.py  test_evaluation_platform.py  test_gemini_advisory.py  test_gemini_classification_adjudicator.py  test_gemini_client.py  test_gemini_diagnostics.py  test_gemini_hint_adjudicator.py  test_hint_eval.py  test_identity_policy.py  test_learner_state.py  test_learning_events.py  test_leetcode_problem_set.py  test_memory_context.py  test_mock_interview.py  test_pattern_transfer_eval.py  test_pattern_transfer_skill.py  test_problem_classification_eval.py  test_problem_intelligence.py  test_problem_intelligence_skill.py  test_progressive_hinting_skill.py  test_semantic_tool_policy.py  test_tool_gateway.py
(+205 files in other folders)
