[project]
name = "algoflow-backend"
version = "0.1.0"
description = "AlgoFlow FastAPI backend with Google ADK multi-agent orchestration"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "greenlet>=3.0.3",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.1",
  "chromadb>=0.5.5",
  "google-adk>=1.0.0",
  "google-generativeai>=0.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
